crates/sotf-plugins/tests/snapshots/render_plan_snapshots__channel_mute_solo__channel_mute_solo__desktop_600.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "channel_mute_solo",
  "width": 600.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "column",
  "slider_height": 120.0,
  "show_visualizations": false,
  "columns_visible": [
    "config",
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "primary"
  ],
  "overflow_group_ids": [],
  "config_controls": [
    {
      "param_index": 0,
      "param_name": "Enabled",
      "control_type": "toggle",
      "unit": "",
      "range": [
        0.0,
        1.0
      ],
      "read_only": false,
      "enabled": true
    }
  ],
  "main_groups": [
    {
      "id": "primary",
      "title": "",
      "controls": [
        {
          "param_index": 1,
          "param_name": "Dim Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            -60.0,
            0.0
          ],
          "read_only": false,
          "enabled": true
        },
        {
          "param_index": 2,
          "param_name": "Fade Time",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            0.0,
            100.0
          ],
          "read_only": false,
          "enabled": true
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [],
  "viz_slots": [],
  "dynamic_sections": []
}
